# SHL-Research-Intern-Take-Home-Assessment

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py
app/api/: admin.py  dependencies.py  health.py  routes.py
app/core/: config.py  constants.py  logging_.py
app/database/: __init__.py  base.py  models.py  session.py
app/models/: catalog.py  intent.py  request.py  response.py
app/repositories/: catalog_repository.py  embedding_repository.py
app/services/: catalog_service.py  chat_service.py  clarification_service.py  comparison_service.py  conversation_parser.py  embedding_client.py  embedding_document_formatter.py  embedding_service.py  gemini_service.py  intent_extractor.py  prompt_service.py  prompts.py  recommendation_mapper.py  retrieval_service.py
app/utils/: helpers.py  validators.py
data/: catalogue.json
tests/: conftest.py  test_catalog_api.py  test_chat.py  test_embeddings.py  test_health.py  test_normalisation.py
