[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "shl-ai-agent"
version = "0.1.0"
description = "Conversational AI agent that recommends SHL Individual Test Solutions"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "SHL Research Intern", email = "intern@shl.com" }]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["app"]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "PL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D"]
